--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.27.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
